Update and rename README.md to README.html

--- a/README.html
+++ b/README.html
@@ -4,6 +4,6 @@
  
 <img src="https://raw.githubusercontent.com/cp71/benchmarking/master/documentation/docs/image.PNG" width="100">
             
-# benchmark
+<h2> benchmark </h2>
 
-A Python library for Mixed Frequency Data 
+<h3> A Python library for Mixed Frequency Data </h3>
